# thesis

./: CMakeLists.txt  README.md  default_buildinstall.cmake  templatecommands.sh
differential/: CMakeLists.txt  differential.cpp  differential.h
disresolv/: CMakeLists.txt  eigen.cpp  eigen.h  interpolation.h
main/: CMakeLists.txt  main.h  mainf.cpp
resolv/: CMakeLists.txt  eigen.cpp  eigen.h  functions.cpp  functions.h  integral.cpp  integral.h  interpolation.cpp  interpolation.h  main.cpp
